--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-hook-form": "^7.56.4",
     "react-router-bootstrap": "^0.26.3",
     "react-router-dom": "^7.6.0",
-    "zod": "^3.25.7"
+    "zod": "^3.25.7",
+    "zustand": "^5.0.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
